--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   # english_words render random word
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
+  flutter_swiper: ^1.0.6
 
 dev_dependencies:
   flutter_test:
