--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
   flutter_swiper: ^1.0.6
+  # location: ^2.3.5
+  # image_picker: ^0.6.0+17
 
 dev_dependencies:
   flutter_test:
